kubernates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-service
  template:
    metadata:
      name: hello-service
      labels:
        app: hello-service
        version: v1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            -  podAffinityTerm:
                 labelSelector:
                   matchExpressions:
                     - key: app
                       operator: In
                       values:
                         - hello-service
                 topologyKey: kubernetes.io/hostname
               weight: 100
      containers:
      - name: hello-service
        image: gurpreetgandhi/hello:v1006
        imagePullPolicy: Always
#        volumeMounts:
#        - name: application-config
#          mountPath: /deployments/config
#          readOnly: true
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: hello-service
